pkg/main/default/objects/blng__PaymentGateway__c/fields/MerchantReference__c.field-meta.xml
<CustomField>
    <fullName>MerchantReference__c</fullName>
    <label>MerchantReference</label>
    <length>128</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>