pkg/main/default/objects/blng__PaymentGateway__c/fields/TransactionSecurityKey__c.field-meta.xml
<CustomField>
    <fullName>TransactionSecurityKey__c</fullName>
    <label>TransactionSecurityKey</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>